--- a/ShoppingList/View/SettingsView.xaml
+++ b/ShoppingList/View/SettingsView.xaml
@@ -72,51 +72,40 @@
 
             <HorizontalStackLayout Padding="25"
                                    Margin="25,0,0,0">
-                <control:CircularButton ButtonColor="CadetBlue"
+                <control:CircularButton ButtonColor="{StaticResource NauticalPrimary}"
                                         WidthRequest="30"
                                         HeightRequest="30"
+                                        IsVisible="True"
                                         Margin="25,0,0,25"
-                                        x:Name="CadetBlueButton">
+                                        x:Name="Nautical">
 
                     <control:CircularButton.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding UpdatePrimaryColorPressedCommand}"
-                                              CommandParameter="CadetBlue"/>
+                                              CommandParameter="Nautical"/>
                     </control:CircularButton.GestureRecognizers>
                     
                 </control:CircularButton>
-                <control:CircularButton ButtonColor="Pink"
+                <control:CircularButton ButtonColor="{StaticResource NeonPrimary}"
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
-                                        x:Name="PinkButton">
+                                        x:Name="Neon">
 
                     <control:CircularButton.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding UpdatePrimaryColorPressedCommand}"
-                                              CommandParameter="Pink"/>
+                                              CommandParameter="Neon"/>
                     </control:CircularButton.GestureRecognizers>
                     
                 </control:CircularButton>
-                <control:CircularButton ButtonColor="MediumPurple"
+                <control:CircularButton ButtonColor="{StaticResource StrikingPrimary}"
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
-                                        x:Name="MediumPurpleButton">
+                                        x:Name="Striking">
 
                     <control:CircularButton.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding UpdatePrimaryColorPressedCommand}"
-                                              CommandParameter="MediumPurple"/>
-                    </control:CircularButton.GestureRecognizers>
-                    
-                </control:CircularButton>
-                <control:CircularButton ButtonColor="WhiteSmoke"
-                                        WidthRequest="30"
-                                        HeightRequest="30"
-                                        Margin="25,0,0,25"
-                                        x:Name="WhiteSmokeButton">
-
-                    <control:CircularButton.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding UpdatePrimaryColorPressedCommand}"
-                                              CommandParameter="WhiteSmoke"/>
+                                              CommandParameter="Striking"/>
                     </control:CircularButton.GestureRecognizers>
                     
                 </control:CircularButton>
