--- a/ShoppingList/Resources/Styles/Styles.xaml
+++ b/ShoppingList/Resources/Styles/Styles.xaml
@@ -122,8 +122,8 @@
 
     <Style TargetType="Frame">
         <Setter Property="HasShadow" Value="False" />
-        <Setter Property="BorderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray900}}" />
-        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource Gray900}}" />
+        <Setter Property="BorderColor" Value="{AppThemeBinding Light={DynamicResource DarkAccent}, Dark={DynamicResource DarkAccent}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={DynamicResource Tertiary}, Dark={DynamicResource Tertiary}}" />
         <Setter Property="CornerRadius" Value="8" />
     </Style>
 
